--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@
             This site is a sample project for the <strong>awesome</strong> Git
             tutorial <a href="https://www.learnenough.com/git-tutorial"><em>Learn Enough™ Git to Be Dangerous</em></a>.
         </p>
-        <a href="https://www.flickr.com/photos/28883788@N04/10097824543">
-            <img src="images/breaching_whale.jpg" alt="Breaching whale">
+        <a href="https://www.flickr.com/photos/puliarfanita/22959238329">
+            <img src="images/polar_bear.jpg" alt="Polar bear">
         </a>
     </body>
 </html>
