--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
         <title>
             About US
         </title>
+        <!-- 登録商標記号の修正に必要なものをここに足してください -->
     </head>
     <body>
         <h1>About Us</h1>
