Fix trademark character display

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
         <title>
             About US
         </title>
-        <!-- 登録商標記号の修正に必要なものをここに足してください -->
+        <meta charset="utf-8">
     </head>
     <body>
         <h1>About Us</h1>
