--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>
             A whale of a greeting
         </title>
-        <!-- 登録商標記号の修正に必要なものをここに足してください -->
+        <meta charset="utf-8">
     </head>
     <body>
         <h1>hello, workd</h1>
